<resources>
	<string name="app_name">Reminder</string>

	<string name="notification_action_snooze">Snooze</string>
	<string name="notification_action_unpin">Unpin</string>
	<string name="notification_channel_reminders">Reminders</string>

	<string name="reminders_date_format_day">%1$td</string>
	<string name="reminders_date_format_day_name">%1$tA</string>
	<string name="reminders_date_format_month_and_year">%1$tB %1$tY</string>
	<string name="reminders_add_reminder">Add a reminder</string>

	<string name="reminder_editor_set_time">Set a time</string>
	<string name="reminder_editor_delete">Delete</string>
	<string name="reminder_editor_title_add_reminder">Add a reminder</string>
	<string name="reminder_editor_title_edit_reminder">Edit reminder</string>
	<string name="reminder_editor_delete_confirmation_text">Do you want to delete this reminder?</string>
	<string name="reminder_pinned">Pinned</string>
	<string name="reminder_pin">Pin</string>

	<string name="snooze_reminder_15_mins">Snooze for 15 mins</string>
	<string name="snooze_reminder_1_hour">Snooze for 1 hour</string>
	<string name="snooze_reminder_up_to">Snooze up to...</string>
	<string name="snooze_reminder_remind_after">Remind after...</string>

	<string name="snooze_up_to_hint">0</string>
	<string name="snooze_up_to_hours">hours</string>
	<string name="snooze_up_to_minutes">minutes</string>
</resources>
